# Cpp-Pong-Game

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2TTF.cmake
include/: SDL_runner.h  constants.h  vec2d.h
include/control/: controller.h
include/game/: ball.h  contact.h  game.h  game_object.h  paddle.h  player.h
include/render/: SDL_runner.h  audio_handler.h  renderer.h  text_handler.h
src/: SDL_runner.cpp  ball.cpp  ball.h  constants.h  contact.h  controller.cpp  controller.h  game.cpp  game.h  main.cpp  paddle.cpp  paddle.h  player.cpp  player.h  renderer.cpp  renderer.h  score.cpp  score.h  vec2d.cpp  vec2d.h
src/control/: controller.cpp
src/game/: ball.cpp  game.cpp  game_object.cpp  paddle.cpp  player.cpp
src/render/: audio_handler.cpp  renderer.cpp  text_handler.cpp
